added comparison to manuscript

--- a/preprocessing/cohen_k562_multi_cell_state_preprocessing.ipynb
+++ b/preprocessing/cohen_k562_multi_cell_state_preprocessing.ipynb
@@ -1022,7 +1022,7 @@
    "id": "04a518ae-26ec-4bfa-a96c-bd357c00fa92",
    "metadata": {},
    "source": [
-    "Ok. only 2000 cell overlap... I'm not sure if that's reason. \n",
+    "Ok. only ~3k cell overlap. Compared to manuscript claim of \"4,041 cells from two biological replicates\"...\n",
     "\n",
     "First, let's check that weird combo file I found previously. "
    ]
