--- a/preprocessing/cohen_k562_multi_cell_state_preprocessing.ipynb
+++ b/preprocessing/cohen_k562_multi_cell_state_preprocessing.ipynb
@@ -146,7 +146,7 @@
    "id": "bb618a21-c5b8-4e37-b494-eb9ff2ed7849",
    "metadata": {},
    "source": [
-    "Based on the sizes, it seems like the 'big file' is a merge of the two replicate files. But without replicate *information* it's useless."
+    "Based on the sizes, it seems like the 'big file' is a merge of the two replicate files. But without replicate information it's useless."
    ]
   },
   {
