erin post holiday commit

--- a/notebooks/Data_exploration.ipynb
+++ b/notebooks/Data_exploration.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "216f7e1e-d88d-4ef7-96cb-aa69dd49465c",
    "metadata": {},
    "outputs": [
@@ -159,191 +159,23 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A1_GTTACCCAGTTGAAGT-1</td>\n",
-       "      <td>A1</td>\n",
-       "      <td>GAAAGTGTATTTGGGT</td>\n",
-       "      <td>ACGTAACATTATAAT</td>\n",
-       "      <td>devCRE</td>\n",
-       "      <td>Txndc12_chr4_7978</td>\n",
-       "      <td>499</td>\n",
-       "      <td>415</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>A1_GTTACCCAGTTGAAGT-1</td>\n",
-       "      <td>A1</td>\n",
-       "      <td>CCGGGGTAGGCGAAGA</td>\n",
-       "      <td>AACTCAGACTACCAC</td>\n",
-       "      <td>devCRE</td>\n",
-       "      <td>Col1a2_chr6_72</td>\n",
-       "      <td>510</td>\n",
-       "      <td>414</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>A1_GTTACCCAGTTGAAGT-1</td>\n",
-       "      <td>A1</td>\n",
-       "      <td>ACTGACGTCAATCAAT</td>\n",
-       "      <td>TGTTTAAGTCAACAA</td>\n",
-       "      <td>devCRE</td>\n",
-       "      <td>Klf4_chr4_3952</td>\n",
-       "      <td>850</td>\n",
-       "      <td>678</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>A1_GTTACCCAGTTGAAGT-1</td>\n",
-       "      <td>A1</td>\n",
-       "      <td>GGAGGTGTGCGCGTGG</td>\n",
-       "      <td>CAACAACACATTTTA</td>\n",
-       "      <td>devCRE</td>\n",
-       "      <td>Foxa2_chr2_13840</td>\n",
-       "      <td>549</td>\n",
-       "      <td>451</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>A1_GTTACCCAGTTGAAGT-1</td>\n",
-       "      <td>A1</td>\n",
-       "      <td>CGATACCTACTTAATA</td>\n",
-       "      <td>TACCTAATGGGAAAG</td>\n",
-       "      <td>promoters</td>\n",
-       "      <td>minP</td>\n",
-       "      <td>413</td>\n",
-       "      <td>353</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>877059</th>\n",
-       "      <td>2B2_TTCTGTAAGGCTCTCG-1</td>\n",
-       "      <td>2B2</td>\n",
-       "      <td>AGCTGGTACACCCGAG</td>\n",
-       "      <td>GAACAATTAAACGAG</td>\n",
-       "      <td>devCRE</td>\n",
-       "      <td>Sparc_chr11_7198</td>\n",
-       "      <td>55</td>\n",
-       "      <td>50</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>877060</th>\n",
-       "      <td>2B2_TTCTGTAAGGCTCTCG-1</td>\n",
-       "      <td>2B2</td>\n",
-       "      <td>ATTTAGACACCAATAC</td>\n",
-       "      <td>CAGCCCGCCGCCGAG</td>\n",
-       "      <td>promoters</td>\n",
-       "      <td>ubcP</td>\n",
-       "      <td>32</td>\n",
-       "      <td>31</td>\n",
-       "      <td>196</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>877061</th>\n",
-       "      <td>2B2_TGGAACTCAATCCTAG-1</td>\n",
-       "      <td>2B2</td>\n",
-       "      <td>GTTAGATACGCTATGG</td>\n",
-       "      <td>ATGGCACATATCTTA</td>\n",
-       "      <td>devCRE</td>\n",
-       "      <td>Gata4_chr14_5760</td>\n",
-       "      <td>21</td>\n",
-       "      <td>18</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>877062</th>\n",
-       "      <td>2B2_TGGAACTCAATCCTAG-1</td>\n",
-       "      <td>2B2</td>\n",
-       "      <td>GATTAATTCGGTCTAC</td>\n",
-       "      <td>CTCTATCGTCCTCGT</td>\n",
-       "      <td>devCRE</td>\n",
-       "      <td>Lamb1_chr12_2289</td>\n",
-       "      <td>13</td>\n",
-       "      <td>13</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>877063</th>\n",
-       "      <td>2B2_TGGAACTCAATCCTAG-1</td>\n",
-       "      <td>2B2</td>\n",
-       "      <td>AGACCATGCTGCGCGC</td>\n",
-       "      <td>ATCGATTTATAATAC</td>\n",
-       "      <td>promoters</td>\n",
-       "      <td>pgk1P</td>\n",
-       "      <td>15</td>\n",
-       "      <td>14</td>\n",
-       "      <td>30</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>877064 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        cellBC rep_id               oBC              mBC  \\\n",
-       "0        A1_GTTACCCAGTTGAAGT-1     A1  GAAAGTGTATTTGGGT  ACGTAACATTATAAT   \n",
-       "1        A1_GTTACCCAGTTGAAGT-1     A1  CCGGGGTAGGCGAAGA  AACTCAGACTACCAC   \n",
-       "2        A1_GTTACCCAGTTGAAGT-1     A1  ACTGACGTCAATCAAT  TGTTTAAGTCAACAA   \n",
-       "3        A1_GTTACCCAGTTGAAGT-1     A1  GGAGGTGTGCGCGTGG  CAACAACACATTTTA   \n",
-       "4        A1_GTTACCCAGTTGAAGT-1     A1  CGATACCTACTTAATA  TACCTAATGGGAAAG   \n",
-       "...                        ...    ...               ...              ...   \n",
-       "877059  2B2_TTCTGTAAGGCTCTCG-1    2B2  AGCTGGTACACCCGAG  GAACAATTAAACGAG   \n",
-       "877060  2B2_TTCTGTAAGGCTCTCG-1    2B2  ATTTAGACACCAATAC  CAGCCCGCCGCCGAG   \n",
-       "877061  2B2_TGGAACTCAATCCTAG-1    2B2  GTTAGATACGCTATGG  ATGGCACATATCTTA   \n",
-       "877062  2B2_TGGAACTCAATCCTAG-1    2B2  GATTAATTCGGTCTAC  CTCTATCGTCCTCGT   \n",
-       "877063  2B2_TGGAACTCAATCCTAG-1    2B2  AGACCATGCTGCGCGC  ATCGATTTATAATAC   \n",
-       "\n",
-       "        CRE_class             CRE_id  reads_oBC  UMIs_oBC  reads_mBC  UMIs_mBC  \n",
-       "0          devCRE  Txndc12_chr4_7978        499       415          0         0  \n",
-       "1          devCRE     Col1a2_chr6_72        510       414          0         0  \n",
-       "2          devCRE     Klf4_chr4_3952        850       678          0         0  \n",
-       "3          devCRE   Foxa2_chr2_13840        549       451          0         0  \n",
-       "4       promoters               minP        413       353          0         0  \n",
-       "...           ...                ...        ...       ...        ...       ...  \n",
-       "877059     devCRE   Sparc_chr11_7198         55        50          0         0  \n",
-       "877060  promoters               ubcP         32        31        196        11  \n",
-       "877061     devCRE   Gata4_chr14_5760         21        18          0         0  \n",
-       "877062     devCRE   Lamb1_chr12_2289         13        13          0         0  \n",
-       "877063  promoters              pgk1P         15        14         30         3  \n",
-       "\n",
-       "[877064 rows x 10 columns]"
+       "Empty DataFrame\n",
+       "Columns: [cellBC, rep_id, oBC, mBC, CRE_class, CRE_id, reads_oBC, UMIs_oBC, reads_mBC, UMIs_mBC]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "counts"
+    "counts[counts['UMIs_oBC']<10]"
    ]
   },
   {
