--- a/preprocessing/cohen_k562_multi_cell_state_preprocessing.ipynb
+++ b/preprocessing/cohen_k562_multi_cell_state_preprocessing.ipynb
@@ -12,7 +12,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "6f2fb074-8965-426f-bcc0-5b7e6ec38e8a",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "data_root=\"/home/mcn26/palmer_scratch/tabula_data\"\n",
@@ -24,7 +28,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "1355d31b-01fb-4605-bb18-5f287d6bea74",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -34,7 +42,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "4267b21d-ec80-42d9-94d8-efdd244f6e7f",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "k562_root=f\"{zenodo_data_root}/sc_expression_data\""
@@ -52,7 +64,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "e346cee9-56e5-4259-b937-8cffbd2b44d9",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "mystery=pd.read_csv(f\"{k562_root}/k562_pBC_exp.csv\")"
@@ -62,7 +78,11 @@
    "cell_type": "code",
    "execution_count": 41,
    "id": "8674a04c-ea0d-4072-af4d-d60d093d4dba",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "rep1=pd.read_csv(f\"{k562_root}/k562_pBC_exp_rep1.csv\")"
@@ -72,7 +92,11 @@
    "cell_type": "code",
    "execution_count": 42,
    "id": "5a0fa686-8fbb-4791-b560-5a014e59da06",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "rep2=pd.read_csv(f\"{k562_root}/k562_pBC_exp_rep2.csv\")"
@@ -82,7 +106,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "af2fb2b2-e47d-4acd-b00c-bc9cd02c6b52",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -103,7 +131,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "fc4a2c17-1de7-4f6b-b113-59b8b92bd805",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -124,7 +156,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "71ab76c0-2ef1-4d5e-aeff-814d8454a80c",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -153,7 +189,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "ae1d62b3-0a8d-4ce8-a55c-845a7885e8ea",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "rep1[\"rep_id\"]=1\n",
@@ -165,7 +205,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "dd7351e8-23d9-4753-ad0a-11fff0908cdd",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -352,7 +396,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "7ff48702-5b92-46ce-8847-2494e635cb02",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -496,7 +544,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "f54e598d-336a-470c-b449-6db65c4bfafd",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "cell_cycle=pd.read_csv(f'{zenodo_data_root}/sc_cellBC_association/k562_cell_cycle_phase.csv')\n",
@@ -507,7 +559,11 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "f8b45f56-8eb0-4919-a4d7-ce47b0f50b5c",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "def fix(df):\n",
@@ -521,7 +577,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "07da5793-ece1-47cd-8282-66f10ab2a4ed",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "cell_type_key=fix(cell_cycle).merge(fix(cell_identity),on=[\"replicate\",\"cellBC\"],how=\"inner\")"
@@ -531,7 +591,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "0a0910c6-34ac-4859-9567-c68c19743a69",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -560,7 +624,11 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "fc1abae0-45ff-42bb-a581-fdc6ada930d8",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "cell_type_key.rename({'replicate':'rep_id'},axis=1,inplace=True)"
@@ -570,7 +638,11 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "e2fed153-b37f-45df-8b3f-0c088920bde9",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "cell_type_key[\"rep_id\"]=cell_type_key[\"rep_id\"].astype(int)"
@@ -580,7 +652,11 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "5738753d-ee90-4334-b0aa-24d0da678e94",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "sensible_join=df.merge(cell_type_key,on=[\"rep_id\",\"cellBC\"],how=\"left\")"
@@ -590,7 +666,11 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "d971a82e-968c-4da3-beb9-877fe90aa085",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -769,7 +849,11 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "6ee1a49d-08da-4864-92d1-1182f3b2c25d",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -790,7 +874,11 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "61cd90fa-ba53-47ca-aa1c-572ca3f0132e",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -811,7 +899,11 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "406bbada-e6f9-43a6-a970-19c157bdebf2",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -990,7 +1082,11 @@
    "cell_type": "code",
    "execution_count": 35,
    "id": "43b4c72b-33cf-42da-b04b-e042ff30f6c2",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1031,7 +1127,11 @@
    "cell_type": "code",
    "execution_count": 37,
    "id": "30f53fca-011e-4f3f-87bb-ce5aa549fa14",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1069,7 +1169,11 @@
    "cell_type": "code",
    "execution_count": 38,
    "id": "f0ea56c5-60c9-4b77-bbab-e2f5f38f3b34",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1102,7 +1206,11 @@
    "cell_type": "code",
    "execution_count": 46,
    "id": "3515d38b-8451-4363-80ac-dda455f1012f",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "rep1_ncbi=pd.read_csv(rep1_ncbi_k562_path)\n",
@@ -1113,7 +1221,11 @@
    "cell_type": "code",
    "execution_count": 49,
    "id": "36c676fb-04d2-42bc-b589-3a34949a43ca",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1134,7 +1246,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7f6ad3ef-9794-4555-ad1f-d143fd213912",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "#cell_cycle\n",
@@ -1152,9 +1268,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
+   "display_name": "R",
+   "language": "R",
+   "name": "ir"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1163,7 +1279,7 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
+   "name": "R",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.13.0"
