--- a/preprocessing/cohen_k562_multi_cell_state_preprocessing.ipynb
+++ b/preprocessing/cohen_k562_multi_cell_state_preprocessing.ipynb
@@ -10,13 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6f2fb074-8965-426f-bcc0-5b7e6ec38e8a",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data_root=\"/home/mcn26/palmer_scratch/tabula_data\"\n",
@@ -28,11 +24,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "1355d31b-01fb-4605-bb18-5f287d6bea74",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -42,11 +34,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "4267b21d-ec80-42d9-94d8-efdd244f6e7f",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "k562_root=f\"{zenodo_data_root}/sc_expression_data\""
@@ -64,11 +52,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "e346cee9-56e5-4259-b937-8cffbd2b44d9",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "mystery=pd.read_csv(f\"{k562_root}/k562_pBC_exp.csv\")"
@@ -78,11 +62,7 @@
    "cell_type": "code",
    "execution_count": 41,
    "id": "8674a04c-ea0d-4072-af4d-d60d093d4dba",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "rep1=pd.read_csv(f\"{k562_root}/k562_pBC_exp_rep1.csv\")"
@@ -92,11 +72,7 @@
    "cell_type": "code",
    "execution_count": 42,
    "id": "5a0fa686-8fbb-4791-b560-5a014e59da06",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "rep2=pd.read_csv(f\"{k562_root}/k562_pBC_exp_rep2.csv\")"
@@ -106,11 +82,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "af2fb2b2-e47d-4acd-b00c-bc9cd02c6b52",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -131,11 +103,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "fc4a2c17-1de7-4f6b-b113-59b8b92bd805",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -156,11 +124,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "71ab76c0-2ef1-4d5e-aeff-814d8454a80c",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -189,11 +153,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "ae1d62b3-0a8d-4ce8-a55c-845a7885e8ea",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "rep1[\"rep_id\"]=1\n",
@@ -205,11 +165,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "dd7351e8-23d9-4753-ad0a-11fff0908cdd",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -396,11 +352,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "7ff48702-5b92-46ce-8847-2494e635cb02",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -544,11 +496,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "f54e598d-336a-470c-b449-6db65c4bfafd",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "cell_cycle=pd.read_csv(f'{zenodo_data_root}/sc_cellBC_association/k562_cell_cycle_phase.csv')\n",
@@ -559,11 +507,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "f8b45f56-8eb0-4919-a4d7-ce47b0f50b5c",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def fix(df):\n",
@@ -577,11 +521,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "07da5793-ece1-47cd-8282-66f10ab2a4ed",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "cell_type_key=fix(cell_cycle).merge(fix(cell_identity),on=[\"replicate\",\"cellBC\"],how=\"inner\")"
@@ -591,11 +531,7 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "0a0910c6-34ac-4859-9567-c68c19743a69",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -624,11 +560,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "fc1abae0-45ff-42bb-a581-fdc6ada930d8",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "cell_type_key.rename({'replicate':'rep_id'},axis=1,inplace=True)"
@@ -638,11 +570,7 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "e2fed153-b37f-45df-8b3f-0c088920bde9",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "cell_type_key[\"rep_id\"]=cell_type_key[\"rep_id\"].astype(int)"
@@ -652,11 +580,7 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "5738753d-ee90-4334-b0aa-24d0da678e94",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sensible_join=df.merge(cell_type_key,on=[\"rep_id\",\"cellBC\"],how=\"left\")"
@@ -666,11 +590,7 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "d971a82e-968c-4da3-beb9-877fe90aa085",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -849,11 +769,7 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "6ee1a49d-08da-4864-92d1-1182f3b2c25d",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -874,11 +790,7 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "61cd90fa-ba53-47ca-aa1c-572ca3f0132e",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -899,11 +811,7 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "406bbada-e6f9-43a6-a970-19c157bdebf2",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1082,11 +990,7 @@
    "cell_type": "code",
    "execution_count": 35,
    "id": "43b4c72b-33cf-42da-b04b-e042ff30f6c2",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1127,11 +1031,7 @@
    "cell_type": "code",
    "execution_count": 37,
    "id": "30f53fca-011e-4f3f-87bb-ce5aa549fa14",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1169,11 +1069,7 @@
    "cell_type": "code",
    "execution_count": 38,
    "id": "f0ea56c5-60c9-4b77-bbab-e2f5f38f3b34",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1206,11 +1102,7 @@
    "cell_type": "code",
    "execution_count": 46,
    "id": "3515d38b-8451-4363-80ac-dda455f1012f",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "rep1_ncbi=pd.read_csv(rep1_ncbi_k562_path)\n",
@@ -1221,11 +1113,7 @@
    "cell_type": "code",
    "execution_count": 49,
    "id": "36c676fb-04d2-42bc-b589-3a34949a43ca",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1246,11 +1134,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7f6ad3ef-9794-4555-ad1f-d143fd213912",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#cell_cycle\n",
@@ -1268,9 +1152,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "R",
-   "language": "R",
-   "name": "ir"
+   "display_name": "biopython",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1279,10 +1163,10 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "R",
+   "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
