--- a/demo/examine_fake.ipynb
+++ b/demo/examine_fake.ipynb
@@ -230,6 +230,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Recapitulation of $\\theta$ (constant in mean-variance quadratic)\n",
+    "\n",
     "First, let's examine theta. One assumes this is the value in $\\sigma^2=\\mu+\\mu^2/\\theta$. \n",
     "\n",
     "A decent estimate : 3.48 is reasonably close to 3.333."
@@ -239,20 +241,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ok, let's start with the zero-inflation parameter, since that's simpler. \n",
-    "\n",
-    "logit(binomial parameter)=intercept + bool_id2 * (-1.3278) + bool_id3 * (0.8831)\n",
-    "\n",
-    "Parameter is parameter of binomial distribution. Assuming \"success\" means \"not a zero\", then zero inflation as picked in data-creation will be 1-binomial.\n",
-    "\n",
-    "(If \"success\" is \"is a zero\" then we can skip the 1- part. )"
+    "# Recapitulation of zero-inflation parameter"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Recapitulation of zero-inflation parameter"
+    "logit(binomial parameter)=intercept + bool_id2 * (-1.3278) + bool_id3 * (0.8831)\n",
+    "\n",
+    "Parameter is parameter of binomial distribution. Assuming \"success\" means \"not a zero\", then zero inflation as picked in data-creation will be 1-binomial.\n",
+    "\n",
+    "(If \"success\" is \"is a zero\" then we can skip the 1- part. )"
    ]
   },
   {
