retan to check return type of statsmodels

--- a/notebooks/demos/parameter_extraction_demo/examine_fake_python.ipynb
+++ b/notebooks/demos/parameter_extraction_demo/examine_fake_python.ipynb
@@ -383,9 +383,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'statsmodels.discrete.count_model.ZeroInflatedNegativeBinomialResultsWrapper'>\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -401,10 +408,10 @@
        "  <th>Method:</th>                       <td>MLE</td>              <th>  Df Model:          </th>  <td>     9</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>                  <td>Wed, 19 Feb 2025</td>        <th>  Pseudo R-squ.:     </th>  <td>0.1598</td> \n",
+       "  <th>Date:</th>                  <td>Mon, 24 Feb 2025</td>        <th>  Pseudo R-squ.:     </th>  <td>0.1598</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                      <td>16:59:39</td>            <th>  Log-Likelihood:    </th> <td> -21229.</td>\n",
+       "  <th>Time:</th>                      <td>14:17:24</td>            <th>  Log-Likelihood:    </th> <td> -21229.</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>converged:</th>                   <td>True</td>              <th>  LL-Null:           </th> <td> -25265.</td>\n",
@@ -468,8 +475,8 @@
        "\\textbf{Dep. Variable:}                             &           umi\\_count          & \\textbf{  No. Observations:  } &    14312    \\\\\n",
        "\\textbf{Model:}                                     & ZeroInflatedNegativeBinomialP & \\textbf{  Df Residuals:      } &    14302    \\\\\n",
        "\\textbf{Method:}                                    &              MLE              & \\textbf{  Df Model:          } &        9    \\\\\n",
-       "\\textbf{Date:}                                      &        Wed, 19 Feb 2025       & \\textbf{  Pseudo R-squ.:     } &   0.1598    \\\\\n",
-       "\\textbf{Time:}                                      &            16:59:39           & \\textbf{  Log-Likelihood:    } &   -21229.   \\\\\n",
+       "\\textbf{Date:}                                      &        Mon, 24 Feb 2025       & \\textbf{  Pseudo R-squ.:     } &   0.1598    \\\\\n",
+       "\\textbf{Time:}                                      &            14:17:24           & \\textbf{  Log-Likelihood:    } &   -21229.   \\\\\n",
        "\\textbf{converged:}                                 &              True             & \\textbf{  LL-Null:           } &   -25265.   \\\\\n",
        "\\textbf{Covariance Type:}                           &           nonrobust           & \\textbf{  LLR p-value:       } &    0.000    \\\\\n",
        "\\bottomrule\n",
@@ -504,8 +511,8 @@
        "Dep. Variable:                         umi_count   No. Observations:                14312\n",
        "Model:             ZeroInflatedNegativeBinomialP   Df Residuals:                    14302\n",
        "Method:                                      MLE   Df Model:                            9\n",
-       "Date:                           Wed, 19 Feb 2025   Pseudo R-squ.:                  0.1598\n",
-       "Time:                                   16:59:39   Log-Likelihood:                -21229.\n",
+       "Date:                           Mon, 24 Feb 2025   Pseudo R-squ.:                  0.1598\n",
+       "Time:                                   14:17:24   Log-Likelihood:                -21229.\n",
        "converged:                                  True   LL-Null:                       -25265.\n",
        "Covariance Type:                       nonrobust   LLR p-value:                     0.000\n",
        "=============================================================================================================\n",
@@ -529,12 +536,13 @@
        "\"\"\""
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print(type(zinb_result))\n",
     "zinb_result.summary()"
    ]
   },
