--- a/preprocessing/seelig/seelig_data_exploration.ipynb
+++ b/preprocessing/seelig/seelig_data_exploration.ipynb
@@ -30,7 +30,7 @@
      "data": {
       "text/plain": [
        "('/home/mcn26/palmer_scratch/tabula_data/GSE269037_RAW.tar',\n",
-       " <http.client.HTTPMessage at 0x1471112dc7d0>)"
+       " <http.client.HTTPMessage at 0x145bdc49b9b0>)"
       ]
      },
      "execution_count": 2,
@@ -41,7 +41,7 @@
    "source": [
     "name=\"GSE269037_RAW\"\n",
     "seelig_data_path=f\"{data_root}/{name}.tar\"\n",
-    "\n",
+    "# Iterative deep learning-design of human enhancers exploits condensed sequence grammar to achieve cell type-specificity\n",
     "urllib.request.urlretrieve(\"https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSE269037&format=file\",\n",
     "                           seelig_data_path)"
    ]
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "a0af2683-64b5-4c0c-889c-37e246d96aa1",
    "metadata": {},
    "outputs": [],
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "7529d230-ebbb-4a04-ad78-8ca9d8d935d3",
    "metadata": {},
    "outputs": [
@@ -910,7 +910,7 @@
        "[1345 rows x 10640 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "5289449c-12e5-4ff9-bd8f-c5b182e713a0",
    "metadata": {},
    "outputs": [
@@ -955,7 +955,7 @@
        "True"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,7 +970,11 @@
    "id": "366df62d-0098-4cc5-a6d6-5cd5f6822109",
    "metadata": {},
    "source": [
-    "Yes they are."
+    "Yes they are.\n",
+    "\n",
+    "OK next question: do we need to recapitulate their cell-type calling, or can we get that from somewhere..?\n",
+    "\n",
+    "Examining the preprint... It seems we will have to re-call cell types, possibly QC. "
    ]
   },
   {
@@ -998,7 +1002,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
