--- a/preprocessing/seelig/seelig_data_exploration.ipynb
+++ b/preprocessing/seelig/seelig_data_exploration.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "\n",
     "data_root=\"/home/mcn26/palmer_scratch/tabula_data\"\n",
-    "output_root=\"/home/mcn26/palmer_scratch/tabula_data/formatted\""
+    "#output_root=\"/home/mcn26/palmer_scratch/tabula_data/formatted\""
    ]
   },
   {
@@ -976,14 +976,6 @@
     "\n",
     "Examining the preprint... It seems we will have to re-call cell types, possibly QC. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8a277ab-1da3-4b50-9eee-65e9b085f5af",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
